Added funny pie

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div id="platen-knob-left"></div>
         </div>
         <div id="paper">
-          <div id="note">Boo!<br>Happy <br>Birthday,<br>Steve!<br><br><br><br></div>
+          <div id="note">Boo!<br>Happy <br>PIE day,<br>Steve!<br>And Happy Birthday too I guess.<br><br><br></div>
         </div>
         <div id="body">
           <div id="top"></div>
